--- a/distutils/apiref.po
+++ b/distutils/apiref.po
@@ -367,7 +367,7 @@ msgstr ""
 "Ejecuta un script de instalación en un entorno algo controlado y retorna la "
 "instancia de la clase :class:`distutils.dist.Distribution` que maneja las "
 "cosas. Esto es útil si se necesitan encontrar los metadatos de distribución "
-"(pasados ​​como palabra clave *args* desde un script a la función :func:"
+"(pasados como palabra clave *args* desde un script a la función :func:"
 "`setup`), o el contenido de los archivos de configuración o la línea de "
 "comandos."
 
@@ -955,7 +955,7 @@ msgid ""
 "standard system libraries that the linker may include by default."
 msgstr ""
 "Establece la lista de bibliotecas que se incluirán en todos los enlaces "
-"manejados ​​por este compilador de objeto en *libnames* (una lista de "
+"manejados por este compilador de objeto en *libnames* (una lista de "
 "strings). Esto no afecta a las bibliotecas del sistema estándar que el "
 "vinculador pueda incluir de forma predeterminada."
 
@@ -1273,7 +1273,7 @@ msgstr ""
 "DOS/Windows), lo más probable es que sean listas de strings: argumentos de "
 "línea de comandos adicionales para anteponer/agregar a la línea de comandos "
 "del compilador. En otras plataformas, consulta la documentación de la clase "
-"de implementación. En cualquier caso, están pensados ​​como una vía de escape "
+"de implementación. En cualquier caso, están pensados como una vía de escape "
 "para aquellas ocasiones en las que la marco del compilador abstracto no es "
 "suficiente."
 
@@ -3468,4 +3468,4 @@ msgid ""
 msgstr ""
 "El comando ``check`` realiza algunas pruebas en los metadatos de un paquete. "
 "Por ejemplo, verifica que todos los metadatos requeridos se proporcionen "
-"como argumentos pasados ​​a la función :func:`setup`."
+"como argumentos pasados a la función :func:`setup`."
