--- a/faq/design.po
+++ b/faq/design.po
@@ -62,8 +62,8 @@ msgid ""
 "will sometimes stare at it a long time wondering as to why ``y`` is being "
 "decremented even for ``x > y``."
 msgstr ""
-"Solo se ejecuta la instrucción ``x ++`` si la condición es verdadera, pero "
-"la indentación lo lleva a creer lo contrario. Incluso los programadores "
+"Solo se ejecuta la instrucción ``x++`` si la condición es verdadera, pero la "
+"indentación lo lleva a creer lo contrario. Incluso los programadores "
 "experimentados de C a veces lo miran durante mucho tiempo preguntándose por "
 "qué ``y`` se está disminuyendo incluso para ``x > y``."
 
