--- a/faq/extending.po
+++ b/faq/extending.po
@@ -489,9 +489,9 @@ msgid ""
 "extension module using g++ (e.g., ``g++ -shared -o mymodule.so mymodule.o``)."
 msgstr ""
 "Para cargar dinámicamente módulos de extensión g++, debes recompilar Python, "
-"hacer un nuevo *link* usando g++ (cambia LINKCC en el Python Modules "
-"Makefile) y enlaza *link* tu extensión usando g++ (por ejemplo `g++ -shared -"
-"o mymodule.so mymodule.o``)."
+"hacer un nuevo enlace usando g++ (cambia LINKCC en el Python Modules "
+"Makefile) y enlaza tu extensión usando g++ (por ejemplo, ``g++ -shared -o "
+"mymodule.so mymodule.o``)."
 
 #: ../Doc/faq/extending.rst:409
 msgid ""
