--- a/faq/general.po
+++ b/faq/general.po
@@ -319,11 +319,11 @@ msgid ""
 "words, all versions labeled 2.0aN precede the versions labeled 2.0bN, which "
 "precede versions labeled 2.0rcN, and *those* precede 2.0."
 msgstr ""
-"Las versiones alpha, beta y candidata de lanzamiento (*release candidate*) "
-"tienen un sufijo adicional. El sufijo para la versión alpha es \"aN\" para "
-"algunos números N pequeños; el sufijo para beta es \"bN\" para algunos "
-"números N pequeños, y el sufijo para *release candidates* es \"cN\" para "
-"algunos números N pequeños. En otras palabras, todas las versiones "
+"Las versiones candidatas de lanzamiento alpha, beta y candidata de "
+"lanzamiento tienen un sufijo adicional. El sufijo para la versión alpha es "
+"\"aN\" para algunos números N pequeños; el sufijo para beta es \"bN\" para "
+"algunos números N pequeños, y el sufijo para *release candidates* es \"cN\" "
+"para algunos números N pequeños. En otras palabras, todas las versiones "
 "etiquetadas 2.0aN preceden a las 2.0bN, que preceden a las etiquetadas "
 "2.0cN, y *todas esas* preceden a la 2.0."
 
