--- a/faq/library.po
+++ b/faq/library.po
@@ -805,8 +805,8 @@ msgstr ""
 ":func:`os.read` es una función de bajo nivel que recibe un descriptor de "
 "fichero, un entero pequeño representando el fichero abierto. :func:`os."
 "popen` crea un objeto fichero de alto nivel, el mismo tipo que retorna la "
-"función *built-in* :func:`open`. Así, para leer *n* bytes de un *pipe* *p* "
-"creado con :func:`os.popen`, necesita usar ``p.read(n)``."
+"función incorporada :func:`open`. Así, para leer *n* bytes de una tubería "
+"*p* creado con :func:`os.popen`, necesita usar ``p.read(n)``."
 
 #: ../Doc/faq/library.rst:618
 msgid "How do I access the serial (RS232) port?"
@@ -863,10 +863,10 @@ msgid ""
 "marks the Python-level file object as being closed, but does *not* close the "
 "associated C file descriptor."
 msgstr ""
-"Pero *stdin*, *stdout* y *stderr* se tratan de manera especial en Python, "
-"debido a un estatus especial que también tienen en C. Ejecutando ``sys."
-"stdout.close()`` marca el objeto fichero de nivel Python para ser cerrado, "
-"pero *no* cierra el descriptor de fichero asociado en C."
+"Pero stdin, stdout y stderr se tratan de manera especial en Python, debido a "
+"un estatus especial que también tienen en C. Ejecutando ``sys.stdout."
+"close()`` marca el objeto fichero de nivel Python para ser cerrado, pero "
+"*no* cierra el descriptor de fichero asociado en C."
 
 #: ../Doc/faq/library.rst:646
 msgid ""
@@ -1158,31 +1158,3 @@ msgid ""
 msgstr ""
 "También hay una clase ``Random`` que usted puede instanciar para crear "
 "múltiples generadores independientes de valores aleatorios."
-
-#~ msgid ""
-#~ "To prevent the TCP connect from blocking, you can set the socket to non-"
-#~ "blocking mode.  Then when you do the ``connect()``, you will either "
-#~ "connect immediately (unlikely) or get an exception that contains the "
-#~ "error number as ``.errno``. ``errno.EINPROGRESS`` indicates that the "
-#~ "connection is in progress, but hasn't finished yet.  Different OSes will "
-#~ "return different values, so you're going to have to check what's returned "
-#~ "on your system."
-#~ msgstr ""
-#~ "Para prevenir el bloqueo en la conexión TCP, puede establecer el socket "
-#~ "en modo no bloqueante. Luego cuando ejecute ``connect()``, conectará "
-#~ "inmediatamente (improbable) u obtendrá una excepción que contiene el "
-#~ "número de error como ``.errno``. ``errno.EINPROGRESS`` indica que la "
-#~ "conexión está en curso, pero aún no ha terminado. Diferentes sistemas "
-#~ "operativos retornarán diferentes valores, así que debe comprobar cuál es "
-#~ "el retornado en su sistema."
-
-#~ msgid ""
-#~ "The :mod:`asyncore` module presents a framework-like approach to the "
-#~ "problem of writing non-blocking networking code. The third-party `Twisted "
-#~ "<https://twistedmatrix.com/trac/>`_ library is a popular and feature-rich "
-#~ "alternative."
-#~ msgstr ""
-#~ "El módulo :mod:`asyncore` ofrece una enfoque de tipo *framework* al "
-#~ "problema de escribir código de red no bloqueante. La biblioteca de "
-#~ "terceros `Twisted <https://twistedmatrix.com/trac/>`_ es una alternativa "
-#~ "popular y ofrece muchas capacidades."
