--- a/faq/windows.po
+++ b/faq/windows.po
@@ -57,7 +57,7 @@ msgstr ""
 "A menos que esté utilizando algún tipo de entorno de desarrollo, terminará "
 "escribiendo comandos de Windows en lo que se denomina \"DOS\" o \"símbolo "
 "del sistema de Windows\". En general, puede abrir dicha ventana desde su "
-"barra de búsqueda buscando *cmd*. Debería poder reconocer cuándo inició "
+"barra de búsqueda buscando ``cmd``. Debería poder reconocer cuándo inició "
 "dicha ventana porque verá un símbolo del sistema de Windows, que en general "
 "se ve así:"
 
@@ -86,9 +86,9 @@ msgid ""
 "compiles it into bytecodes, and then executes the bytecodes to run your "
 "program. So, how do you arrange for the interpreter to handle your Python?"
 msgstr ""
-"Tenga en cuenta que sus scripts de Python deben ser procesados ​​por otro "
-"programa llamado \"intérprete\" de Python. El intérprete lee su script, lo "
-"compila en *bytecode* y ejecuta el *bytecode* para ejecutar su programa. "
+"Tenga en cuenta que sus scripts de Python deben ser procesados por otro "
+"programa llamado *intérprete* de Python. El intérprete lee su script, lo "
+"compila en *bytecode* y ejecuta el bytecode para ejecutar su programa. "
 "Entonces, ¿cómo le das tu código Python al intérprete?"
 
 #: ../Doc/faq/windows.rst:55
@@ -353,9 +353,9 @@ msgid ""
 "link *into* your .exe file (!)  You do _not_ have to create a DLL file, and "
 "this also simplifies linking."
 msgstr ""
-"Si está utilizando *SWIG*, es fácil crear un \"complemento\" de Python que "
+"Si está utilizando SWIG, es fácil crear un \"complemento\" de Python que "
 "hará que los datos y métodos de la aplicación estén disponibles para Python. "
-"*SWIG* se encargará de todos los detalles aburridos para usted. El resultado "
+"SWIG se encargará de todos los detalles aburridos para usted. El resultado "
 "es un código C que se vincula *adentro* de su archivo.exe (!) _No_ necesita "
 "crear un archivo DLL, y también simplifica la vinculación."
 
@@ -528,5 +528,5 @@ msgstr ""
 #~ "Consulte `cx_Freeze <https://anthony-tuininga.github.io/cx_Freeze/>`_ "
 #~ "para obtener una extensión distutils que le permite crear ejecutables de "
 #~ "consola y GUI a partir del código Python. `py2exe <http://www.py2exe.org/"
-#~ ">`_ es la extensión más popular para construir ejecutables basados ​​en "
+#~ ">`_ es la extensión más popular para construir ejecutables basados en "
 #~ "Python 2.x, pero la implementación en Python 3 está en desarrollo."
