--- a/glossary.po
+++ b/glossary.po
@@ -170,7 +170,7 @@ msgid ""
 "by ``**``.  For example, ``3`` and ``5`` are both keyword arguments in the "
 "following calls to :func:`complex`::"
 msgstr ""
-":dfn:`argumento nombrado`: es un argumento precedido por un identificador "
+":dfn:`argumento nombrado <keyword argument>`: es un argumento precedido por un identificador "
 "(por ejemplo, ``nombre=``) en una llamada a una función o pasado como valor "
 "en un diccionario precedido por ``**``. Por ejemplo ``3`` y ``5`` son "
 "argumentos nombrados en las llamadas a :func:`complex`::"
