--- a/reference/grammar.po
+++ b/reference/grammar.po
@@ -54,4 +54,5 @@ msgstr ""
 "se requiere que coincida pero no se consume), mientras que ``!`` Indica una "
 "anticipación negativa (es decir, se requiere _no_ para coincidir). Usamos el "
 "separador ``|`` para referirnos a la \"elección ordenada\" de PEG (escrito "
-"como ``/`` en las gramáticas tradicionales de PEG)."
+"como ``/`` en las gramáticas tradicionales de PEG). Ve :pep:`617` para más "
+"detalles de la sintaxis de la gramática."
