--- a/reference/import.po
+++ b/reference/import.po
@@ -219,7 +219,7 @@ msgstr ""
 "package>` y :term:`paquetes de espacio de nombres <namespace package>`.  Los "
 "paquetes regulares son los paquetes tradicionales tal y como existían en "
 "Python 3.2 y anteriores. Un paquete regular se implementa típicamente como "
-"un directorio que contiene un archivo ``init__.py``.  Cuando se importa un "
+"un directorio que contiene un archivo ``__init__.py``.  Cuando se importa un "
 "paquete regular, este archivo ``__init__.py`` se ejecuta implícitamente, y "
 "los objetos que define están vinculados a nombres en el espacio de nombres "
 "del paquete.  El archivo ``__init__.py`` puede contener el mismo código "
@@ -588,7 +588,7 @@ msgid ""
 "system passes in a target module only during reload."
 msgstr ""
 "El método de los buscadores de metarutas de :meth:`~importlib.abc."
-"metapathFinder.find_spec()` se llama con dos o tres argumentos.  El primero "
+"MetaPathFinder.find_spec()` se llama con dos o tres argumentos.  El primero "
 "es el nombre completo del módulo que se está importando, por ejemplo ``foo."
 "bar.baz``. El segundo argumento son las entradas de ruta de acceso que se "
 "utilizarán para la búsqueda de módulos.  Para los módulos de nivel superior, "
@@ -964,7 +964,7 @@ msgstr ""
 "Dadas las reglas de enlace de nombres familiares de Python, esto puede "
 "parecer sorprendente, pero en realidad es una característica fundamental del "
 "sistema de importación.  La retención invariable es que si tiene ``sys."
-"modules[`spam`]`` y ``sys.modules[`spam.foo`]`` (como lo haría después de la "
+"modules['spam']`` y ``sys.modules['spam.foo']`` (como lo haría después de la "
 "importación anterior), este último debe aparecer como el atributo ``foo`` de "
 "la primera."
 
@@ -1637,7 +1637,7 @@ msgstr ""
 "entrada de ruta de acceso, o puede generar :exc:`ImportError`.  Un :exc:"
 "`ImportError` es utilizado por el buscador basado en ruta para indicar que "
 "el gancho no puede encontrar un :term:`path entry finder` para eso :term:"
-"`entrada de ruta`.  Se omite la excepción y la iteración :term:`import path` "
+"`path entry`.  Se omite la excepción y la iteración :term:`import path` "
 "continúa.  El enlace debe esperar un objeto de rutas o bytes; la "
 "codificación de objetos bytes está hasta el enlace (por ejemplo, puede ser "
 "una codificación del sistema de archivos, UTF-8, o algo más), y si el gancho "
@@ -1705,7 +1705,7 @@ msgid ""
 msgstr ""
 "Para admitir las importaciones de módulos y paquetes inicializados y también "
 "para contribuir con partes a paquetes de espacio de nombres, los buscadores "
-"de entradas de ruta de acceso deben implementar el método :meth:`importlib."
+"de entradas de ruta de acceso deben implementar el método :meth:`~importlib."
 "abc.PathEntryFinder.find_spec`."
 
 #: ../Doc/reference/import.rst:868
@@ -1715,7 +1715,7 @@ msgid ""
 "module.  ``find_spec()`` returns a fully populated spec for the module. This "
 "spec will always have \"loader\" set (with one exception)."
 msgstr ""
-":meth:`importlib.abc.PathEntryFinder.find_spec`` toma dos argumentos: el "
+":meth:`~importlib.abc.PathEntryFinder.find_spec`` toma dos argumentos: el "
 "nombre completo del módulo que se va a importar y el módulo de destino "
 "(opcional).  ``find_spec()`` retorna una especificación completamente "
 "poblada para el módulo. Esta especificación siempre tendrá \"cargador\" "
@@ -1897,8 +1897,8 @@ msgid ""
 "should expose ``XXX.YYY.ZZZ`` as a usable expression, but .moduleY is not a "
 "valid expression."
 msgstr ""
-"debe exponer ``XXX. Yyy. ZZZ`` como una expresión utilizable, pero .moduleY "
-"no es una expresión válida."
+"debe exponer ``XXX.YYY.ZZZ`` como una expresión utilizable, pero .moduleY no "
+"es una expresión válida."
 
 #: ../Doc/reference/import.rst:976
 msgid "Special considerations for __main__"
@@ -2122,7 +2122,7 @@ msgstr "Notas al Pie de Pagina"
 
 #: ../Doc/reference/import.rst:1071
 msgid "See :class:`types.ModuleType`."
-msgstr "Véase :class:`types. ModuleType`."
+msgstr "Véase :class:`types.ModuleType`."
 
 #: ../Doc/reference/import.rst:1073
 msgid ""
@@ -2146,43 +2146,7 @@ msgid ""
 "that code be changed to use ``None`` instead.  See :ref:`portingpythoncode` "
 "for more details."
 msgstr ""
-"En el código heredado, es posible encontrar instancias de :class:`imp. "
+"En el código heredado, es posible encontrar instancias de :class:`imp."
 "NullImporter` en el :data:`sys.path_importer_cache`.  Se recomienda cambiar "
 "el código para usar ``None`` en su lugar.  Consulte :ref:`portingpythoncode` "
 "para obtener más detalles."
-
-#~ msgid ""
-#~ ":meth:`~importlib.abc.PathEntryFinder.find_loader` takes one argument, "
-#~ "the fully qualified name of the module being imported.  ``find_loader()`` "
-#~ "returns a 2-tuple where the first item is the loader and the second item "
-#~ "is a namespace :term:`portion`.  When the first item (i.e. the loader) is "
-#~ "``None``, this means that while the path entry finder does not have a "
-#~ "loader for the named module, it knows that the path entry contributes to "
-#~ "a namespace portion for the named module.  This will almost always be the "
-#~ "case where Python is asked to import a namespace package that has no "
-#~ "physical presence on the file system.  When a path entry finder returns "
-#~ "``None`` for the loader, the second item of the 2-tuple return value must "
-#~ "be a sequence, although it can be empty."
-#~ msgstr ""
-#~ ":meth:`importlib.abc.PathEntryFinder.find_loader` toma un argumento, el "
-#~ "nombre completo del módulo que se va a importar.  ``find_loader()`` "
-#~ "retorna una tupla de 2 donde el primer elemento es el cargador y el "
-#~ "segundo elemento es un espacio de nombres :term:`portion`.  Cuando el "
-#~ "primer elemento (es decir, el cargador) es ``None``, esto significa que "
-#~ "mientras que el buscador de entrada de ruta de acceso no tiene un "
-#~ "cargador para el módulo con nombre, sabe que la entrada de ruta de acceso "
-#~ "contribuye a una parte del espacio de nombres para el módulo con nombre.  "
-#~ "Esto casi siempre será el caso donde se le pide a Python que importe un "
-#~ "paquete de espacio de nombres que no tiene presencia física en el sistema "
-#~ "de archivos.  Cuando un buscador de entradas de ruta retorna ``None`` "
-#~ "para el cargador, el segundo elemento del valor retornado de 2 tuplas "
-#~ "debe ser una secuencia, aunque puede estar vacío."
-
-#~ msgid ""
-#~ "If ``find_loader()`` returns a non-``None`` loader value, the portion is "
-#~ "ignored and the loader is returned from the path based finder, "
-#~ "terminating the search through the path entries."
-#~ msgstr ""
-#~ "Si ``find_loader()`` retorna un valor de cargador que no es ``None``, la "
-#~ "parte se omite y el cargador se retorna desde el buscador basado en "
-#~ "rutas, terminando la búsqueda a través de las entradas de ruta de acceso."
