--- a/reference/introduction.po
+++ b/reference/introduction.po
@@ -136,7 +136,7 @@ msgstr ""
 "de *scripting* para aplicaciones Java o se puede usar para crear "
 "aplicaciones usando las librerías de clases de Java. A menudo se usa para "
 "crear pruebas para librerías de Java. Se puede hallar más información en `el "
-"sitio web de Jython <http://jython.org>`_."
+"sitio web de Jython <http://www.jython.org>`_."
 
 #: ../Doc/reference/introduction.rst:63
 msgid "Python for .NET"
@@ -253,7 +253,7 @@ msgstr ""
 "operador menos vinculante en esta notación. Un asterisco (``*``) significa "
 "cero o más repeticiones del elemento anterior; del mismo modo, un signo más "
 "(``+``) significa una o más repeticiones, y una frase entre corchetes "
-"(``[]``) significa cero o una ocurrencia (en otras palabras, la frase "
+"(``[ ]``) significa cero o una ocurrencia (en otras palabras, la frase "
 "adjunta es opcional). Los operadores ``*`` y ``+`` se vinculan lo más "
 "firmemente posible; los paréntesis se usan para agrupar. Las cadenas de "
 "caracteres literales están entre comillas. El espacio en blanco sólo es útil "
