--- a/reference/lexical_analysis.po
+++ b/reference/lexical_analysis.po
@@ -683,7 +683,7 @@ msgid ""
 "explicitly documented use, is subject to breakage without warning."
 msgstr ""
 "Nombres definidos por el sistema, conocidos informalmente como nombres "
-"\"*dunder*\". Estos nombres son definidos por el intérprete y su aplicación "
+"\"dunder\". Estos nombres son definidos por el intérprete y su aplicación "
 "(incluida la biblioteca estándar). Los nombres actuales del sistema se "
 "discuten en la sección :ref:`specialnames` y en otros lugares. Es probable "
 "que se definan más en futuras versiones de Python.  *Cualquier* uso de "
@@ -1089,7 +1089,7 @@ msgid ""
 "interpreted as those two characters as part of the literal, *not* as a line "
 "continuation."
 msgstr ""
-"Incluso en un literal *raw*, las comillas se pueden escapar con una barra "
+"Incluso en un literal raw, las comillas se pueden escapar con una barra "
 "inversa, pero la barra inversa permanece en el resultado; por ejemplo, ``r"
 "\"\\\"\"`` es un literal de cadena válido que consiste en dos caracteres: "
 "una barra inversa y una comilla doble; ``r\"\\\"`` no es un literal de "
@@ -1248,8 +1248,8 @@ msgid ""
 "result, ``'!r'`` calls :func:`repr`, and ``'!a'`` calls :func:`ascii`."
 msgstr ""
 "Si se especifica una conversión, el resultado de la evaluación de la "
-"expresión se convierte antes del formateo.  La conversión ```!s'`` llama :"
-"func:`str` al resultado, ```!r'`` llama :func:`repr`, y ```!a'`` llama :func:"
+"expresión se convierte antes del formateo.  La conversión ``'!s'`` llama :"
+"func:`str` al resultado, ``'!r'`` llama :func:`repr`, y ``'!a'`` llama :func:"
 "`ascii`."
 
 #: ../Doc/reference/lexical_analysis.rst:744
