--- a/reference/simple_stmts.po
+++ b/reference/simple_stmts.po
@@ -358,7 +358,7 @@ msgid ""
 "instance, the following program prints ``[0, 2]``::"
 msgstr ""
 "Aunque la definición de asignación implica que las superposiciones entre el "
-"lado izquierdo y el lado derecho son ‘simultáneas’ (por ejemplo, ``a, b = b, "
+"lado izquierdo y el lado derecho son ‘simultáneas' (por ejemplo, ``a, b = b, "
 "a`` intercambia dos variables), las superposiciones *dentro* de la colección "
 "de las variables asignadas ocurren de izquierda a derecha, lo que a veces "
 "genera confusión. Por ejemplo, el siguiente programa imprime ``[0, 2]``::"
@@ -1111,7 +1111,7 @@ msgid ""
 "defined in the module are bound in the local namespace for the scope where "
 "the :keyword:`import` statement occurs."
 msgstr ""
-"Si la lista de identificadores se reemplaza por una estrella (``’*’``), "
+"Si la lista de identificadores se reemplaza por una estrella (``'*'``), "
 "todos los nombres públicos definidos en el módulo se enlazan en el espacio "
 "de nombres local para el ámbito donde ocurre la declaración :keyword:"
 "`import`."
@@ -1135,7 +1135,7 @@ msgstr ""
 "públicos y se requiere que existan.  Si ``__all__`` no está definido, el "
 "conjunto de nombres públicos incluye todos los nombres que se encuentran en "
 "el espacio de nombres del módulo que no comienzan con un carácter de "
-"subrayado (``’_’``).  ``__all__`` debe contener la API pública completa. Su "
+"subrayado (``'_'``).  ``__all__`` debe contener la API pública completa. Su "
 "objetivo es evitar la exportación accidental de elementos que no forman "
 "parte de la API (como los módulos de biblioteca que se importaron y "
 "utilizaron dentro del módulo)."
@@ -1255,8 +1255,8 @@ msgid ""
 "The only feature that requires using the future statement is ``annotations`` "
 "(see :pep:`563`)."
 msgstr ""
-"La única característica en Python 3.7 que requiere el uso la declaración "
-"futuro es ``annotations``."
+"La única característica que requiere usar la declaración futura es "
+"``annotations`` (ver :pep:`563`)."
 
 #: ../Doc/reference/simple_stmts.rst:883
 msgid ""
@@ -1433,13 +1433,13 @@ msgid ""
 "containing the function call.  The same applies to the :func:`eval` and :"
 "func:`compile` functions."
 msgstr ""
-"** Nota del programador: ** :keyword:`global` es una directiva para el "
+"**Nota del programador:** :keyword:`global` es una directiva para el "
 "analizador.  Se aplica solo al código analizado al mismo tiempo que la "
 "declaración :keyword:`!global`. En particular, una declaración :keyword:`!"
 "global` contenida en una cadena u objeto de código suministrado a la función "
 "incorporada :func:`exec` no afecta el bloque de código *que contiene* la "
 "llamada a la función, y el código contenido en dicha función una cadena no "
-"se ve afectada por la declaración keyword:`!global` en el código que "
+"se ve afectada por la declaración :keyword:`!global` en el código que "
 "contiene la llamada a la función.  Lo mismo se aplica a las funciones :func:"
 "`eval` y :func:`compile`."
 
