--- a/reference/toplevel_components.po
+++ b/reference/toplevel_components.po
@@ -56,7 +56,7 @@ msgstr ""
 "mínimamente inicializado: todos los módulos estándar e integrados están "
 "disponibles, pero ninguno ha sido inicializado, excepto :mod:`sys` (varios "
 "servicios del sistema), :mod:`builtins` (funciones integradas, excepciones y "
-"``Ninguno``) y :mod:`__main__`. Este último se utiliza para proporcionar el "
+"``None``) y :mod:`__main__`. Este último se utiliza para proporcionar el "
 "espacio de nombres local y global para la ejecución del programa completo."
 
 #: ../Doc/reference/toplevel_components.rst:36
