--- a/tutorial/classes.po
+++ b/tutorial/classes.po
@@ -1184,7 +1184,7 @@ msgid ""
 "applies to ``getattr()``, ``setattr()`` and ``delattr()``, as well as when "
 "referencing ``__dict__`` directly."
 msgstr ""
-"Notar que el código pasado a ``exec`` o ``eval()`` no considera que el "
+"Notar que el código pasado a ``exec()`` o ``eval()`` no considera que el "
 "nombre de clase de la clase que invoca sea la clase actual; esto es similar "
 "al efecto de la sentencia ``global``, efecto que es de similar manera "
 "restringido a código que es compilado en conjunto.  La misma restricción "
@@ -1258,12 +1258,13 @@ msgstr ""
 "Este estilo de acceso es limpio, conciso y conveniente.  El uso de "
 "iteradores está impregnado y unifica a Python.  En bambalinas, la sentencia :"
 "keyword:`for` llama a :func:`iter` en el objeto contenedor.  La función "
-"retorna un objeto iterador que define el método :meth:`__next__` que accede "
-"elementos en el contenedor de a uno por vez.  Cuando no hay más elementos, :"
-"meth:`~iterator.__next__` levanta una excepción :exc:`StopIteration` que le "
-"avisa al bucle del :keyword:`!for` que hay que terminar.  Podés llamar al "
-"método :meth:`~iterator.__next__` usando la función integrada :func:`next`; "
-"este ejemplo muestra como funciona todo esto::"
+"retorna un objeto iterador que define el método :meth:`~iterator.__next__` "
+"que accede elementos en el contenedor de a uno por vez.  Cuando no hay más "
+"elementos, :meth:`~iterator.__next__` levanta una excepción :exc:"
+"`StopIteration` que le avisa al bucle del :keyword:`!for` que hay que "
+"terminar.  Podés llamar al método :meth:`~iterator.__next__` usando la "
+"función integrada :func:`next`; este ejemplo muestra como funciona todo "
+"esto::"
 
 #: ../Doc/tutorial/classes.rst:813
 msgid ""
@@ -1274,8 +1275,9 @@ msgid ""
 msgstr ""
 "Habiendo visto la mecánica del protocolo de iteración, es fácil agregar "
 "comportamiento de iterador a tus clases.  Definí un método :meth:`__iter__` "
-"que retorne un objeto con un método :meth:`__next__`.  Si la clase define :"
-"meth:`__next__`, entonces alcanza con que :meth:`__iter__` retorne ``self``::"
+"que retorne un objeto con un método :meth:`~iterator.__next__`.  Si la clase "
+"define :meth:`__next__`, entonces alcanza con que :meth:`__iter__` retorne "
+"``self``::"
 
 #: ../Doc/tutorial/classes.rst:850
 msgid "Generators"
@@ -1307,7 +1309,7 @@ msgstr ""
 "Todo lo que puede ser hecho con generadores también puede ser hecho con "
 "iteradores basados en clases, como se describe en la sección anterior.  Lo "
 "que hace que los generadores sean tan compactos es que los métodos :meth:"
-"`__iter__` y :meth:`__next__` son creados automáticamente."
+"`__iter__` y :meth:`~generator.__next__` son creados automáticamente."
 
 #: ../Doc/tutorial/classes.rst:878
 msgid ""
@@ -1319,7 +1321,7 @@ msgstr ""
 "Otra característica clave es que las variables locales y el estado de la "
 "ejecución son guardados automáticamente entre llamadas.  Esto hace que la "
 "función sea más fácil de escribir y quede mucho más claro que hacerlo usando "
-"variables de instancia tales como ``self.indice`` y ``self.datos``."
+"variables de instancia tales como ``self.index`` y ``self.data``."
 
 #: ../Doc/tutorial/classes.rst:883
 msgid ""
