--- a/tutorial/controlflow.po
+++ b/tutorial/controlflow.po
@@ -188,8 +188,8 @@ msgid ""
 ":keyword:`!break` and :keyword:`!continue` Statements, and :keyword:`!else` "
 "Clauses on Loops"
 msgstr ""
-"Las sentencias :keyword:`break`, :keyword:`continue`, y :keyword:`else` en "
-"bucles"
+"Las sentencias :keyword:`!break`, :keyword:`!continue`, y :keyword:`!else` "
+"en bucles"
 
 #: ../Doc/tutorial/controlflow.rst:166
 msgid ""
@@ -207,11 +207,11 @@ msgid ""
 "loop is terminated by a :keyword:`break` statement.  This is exemplified by "
 "the following loop, which searches for prime numbers::"
 msgstr ""
-"Las sentencias de bucle pueden tener una cláusula`!else` que es ejecutada "
-"cuando el bucle termina, después de agotar el iterable (con :keyword:`for`) "
-"o cuando la condición se hace falsa (con :keyword:`while`), pero no cuando "
-"el bucle se termina con la sentencia :keyword:`break`. Se puede ver el "
-"ejemplo en el siguiente bucle, que busca números primos::"
+"Las sentencias de bucle pueden tener una cláusula :keyword:`!else` que es "
+"ejecutada cuando el bucle termina, después de agotar el iterable (con :"
+"keyword:`for`) o cuando la condición se hace falsa (con :keyword:`while`), "
+"pero no cuando el bucle se termina con la sentencia :keyword:`break`. Se "
+"puede ver el ejemplo en el siguiente bucle, que busca números primos::"
 
 #: ../Doc/tutorial/controlflow.rst:193
 msgid ""
@@ -247,7 +247,7 @@ msgstr ""
 
 #: ../Doc/tutorial/controlflow.rst:224
 msgid ":keyword:`!pass` Statements"
-msgstr "La sentencia :keyword:`pass`"
+msgstr "La sentencia :keyword:`!pass`"
 
 #: ../Doc/tutorial/controlflow.rst:226
 msgid ""
@@ -305,8 +305,8 @@ msgid ""
 "never fails to match. If no case matches, none of the branches is executed."
 msgstr ""
 "Observa el último bloque: el \"nombre de variable\" ``_`` funciona como un "
-"*comodín* y nunca fracasa la coincidencia. Si ninguno de los casos ``case`` "
-"coincide, ninguna de las ramas es ejecutada."
+"*comodín* y nunca fracasa la coincidencia. Si ninguno de los casos coincide, "
+"ninguna de las ramas es ejecutada."
 
 #: ../Doc/tutorial/controlflow.rst:275
 msgid ""
@@ -987,7 +987,7 @@ msgid ""
 "arguments::"
 msgstr ""
 "Pero utilizando ``/`` (parámetros únicamente posicionales), es posible ya "
-"que permite utilizar ``name`` como un parámetro posicional y ``name`` como "
+"que permite utilizar ``name`` como un parámetro posicional y ``'name'`` como "
 "un parámetro de palabras clave::"
 
 #: ../Doc/tutorial/controlflow.rst:844
@@ -1072,11 +1072,11 @@ msgid ""
 "``*args`` parameter are 'keyword-only' arguments, meaning that they can only "
 "be used as keywords rather than positional arguments. ::"
 msgstr ""
-"Normalmente estos argumentos de cantidad variables son los últimos en la "
-"lista de parámetros formales, porque toman todo el remanente de argumentos "
-"que se pasan a la función. Cualquier parámetro que suceda luego del "
-"``*args`` será 'sólo nombrado', o sea que sólo se pueden usar como "
-"argumentos nombrados y no como posicionales.::"
+"Normalmente estos argumentos variadicos son los últimos en la lista de "
+"parámetros formales, porque toman todo el remanente de argumentos que se "
+"pasan a la función. Cualquier parámetro que suceda luego del ``*args`` será "
+"'sólo nombrado', o sea que sólo se pueden usar como argumentos nombrados y "
+"no como posicionales.::"
 
 #: ../Doc/tutorial/controlflow.rst:902
 msgid "Unpacking Argument Lists"
