--- a/tutorial/errors.po
+++ b/tutorial/errors.po
@@ -165,7 +165,7 @@ msgid ""
 "First, the *try clause* (the statement(s) between the :keyword:`try` and :"
 "keyword:`except` keywords) is executed."
 msgstr ""
-"Primero, se ejecuta la cláusula *try* (la(s) linea(s) entre las palabras "
+"Primero, se ejecuta la *cláusula try* (la(s) linea(s) entre las palabras "
 "reservadas :keyword:`try` y la :keyword:`except`)."
 
 #: ../Doc/tutorial/errors.rst:101
@@ -173,7 +173,7 @@ msgid ""
 "If no exception occurs, the *except clause* is skipped and execution of the :"
 "keyword:`try` statement is finished."
 msgstr ""
-"Si no ocurre ninguna excepción, la cláusula *except* se omite y la ejecución "
+"Si no ocurre ninguna excepción, la *cláusula except* se omite y la ejecución "
 "de la cláusula :keyword:`try` finaliza."
 
 #: ../Doc/tutorial/errors.rst:104
@@ -611,26 +611,3 @@ msgstr ""
 "incluso si aparece algún error durante el procesado de las líneas.  Los "
 "objetos que, como los ficheros, posean acciones predefinidas de limpieza lo "
 "indicarán en su documentación."
-
-# es relazanda luego suena "raro", por el mal uso de la forma pasiva y por
-# preferir luego en vez de 'después'
-#~ msgid ""
-#~ "A *finally clause* is always executed before leaving the :keyword:`try` "
-#~ "statement, whether an exception has occurred or not. When an exception "
-#~ "has occurred in the :keyword:`!try` clause and has not been handled by "
-#~ "an :keyword:`except` clause (or it has occurred in an :keyword:`!except` "
-#~ "or :keyword:`!else` clause), it is re-raised after the :keyword:`finally` "
-#~ "clause has been executed.  The :keyword:`!finally` clause is also "
-#~ "executed \"on the way out\" when any other clause of the :keyword:`!try` "
-#~ "statement is left vía a :keyword:`break`, :keyword:`continue` or :keyword:"
-#~ "`return` statement.  A more complicated example::"
-#~ msgstr ""
-#~ "Una *cláusula finally* siempre se ejecuta antes de salir de la "
-#~ "declaración :keyword:`try`, haya ocurrido una excepción o no.  Cuando "
-#~ "ocurre una excepción en la cláusula :keyword:`try` y no fue gestionada "
-#~ "por una cláusula :keyword:`except` (o ocurrió en una cláusula :keyword:"
-#~ "`except` o :keyword:`else`), es relanzada luego de que se ejecuta la "
-#~ "cláusula :keyword:`finally`. El :keyword:`finally` es también ejecutado "
-#~ "\"a la salida\" cuando cualquier otra cláusula de la declaración :keyword:"
-#~ "`try` es dejada vía :keyword:`break`, :keyword:`continue` or :keyword:"
-#~ "`return`.  Un ejemplo más complicado::"
