--- a/tutorial/floatingpoint.po
+++ b/tutorial/floatingpoint.po
@@ -279,7 +279,7 @@ msgstr ""
 "si simplemente redondeás lo que mostrás de tus resultados finales al número "
 "de dígitos decimales que esperás.  :func:`str` es normalmente suficiente, y "
 "para un control más fino mirá los parámetros del método de formateo :meth:"
-"`str.format` en :ref:`string-formatting`."
+"`str.format` en :ref:`formatstrings`."
 
 #: ../Doc/tutorial/floatingpoint.rst:152
 msgid ""
@@ -416,8 +416,8 @@ msgstr ""
 "aritmética de punto flotante IEEE-754, y casi todas las plataformas mapean "
 "los flotantes de Python al \"doble precisión\" de IEEE-754.  Estos \"dobles"
 "\" tienen 53 bits de precisión, por lo tanto en la entrada la computadora "
-"intenta convertir 0.1 a la fracción más cercana que puede de la forma "
-"*J*/2\\*\\**N* donde *J* es un entero que contiene exactamente 53 bits. "
+"intenta convertir 0.1 a la fracción más cercana que puede de la forma *J*/2**"
+"\\ *N* donde *J* es un entero que contiene exactamente 53 bits. "
 "Reescribiendo ::"
 
 #: ../Doc/tutorial/floatingpoint.rst:229
