--- a/tutorial/inputoutput.po
+++ b/tutorial/inputoutput.po
@@ -278,7 +278,7 @@ msgid ""
 "ref:`formatstrings`."
 msgstr ""
 "Para una completa descripción del formateo de cadenas con :meth:`str."
-"format`, mirá en :ref:`string-formatting`."
+"format`, mirá en :ref:`formatstrings`."
 
 #: ../Doc/tutorial/inputoutput.rst:214
 msgid "Manual String Formatting"
@@ -428,9 +428,9 @@ msgid ""
 msgstr ""
 "Es una buena práctica usar la declaración :keyword:`with` cuando manejamos "
 "objetos archivo.  Tiene la ventaja que el archivo es cerrado apropiadamente "
-"luego de que el bloque termina, incluso si se generó una excepción.  También "
-"es mucho más corto que escribir los equivalentes bloques :keyword:`try`\\ -"
-"\\ :keyword:`finally` ::"
+"luego de que el bloque termina, incluso si se generó una excepción.  Usando :"
+"keyword:`!with` es mucho más corto que escribir los equivalentes bloques :"
+"keyword:`try`\\ -\\ :keyword:`finally` ::"
 
 #: ../Doc/tutorial/inputoutput.rst:330
 msgid ""
@@ -448,7 +448,7 @@ msgid ""
 "``f.close()`` **might** result in the arguments of ``f.write()`` not being "
 "completely written to the disk, even if the program exits successfully."
 msgstr ""
-"Al llamar a ``f.write()`` sin usar la palabra clave :keyword::`!with` o "
+"Al llamar a ``f.write()`` sin usar la palabra clave :keyword:`!with` o "
 "llamar a ``f.close()`` **podría** dar como resultado los argumentos de ``f."
 "write()`` no se escribe completamente en el disco, incluso si el programa se "
 "cierra correctamente."
@@ -583,9 +583,9 @@ msgid ""
 "*offset* value produces undefined behaviour."
 msgstr ""
 "En los archivos de texto (aquellos que se abrieron sin una ``b`` en el "
-"modo), se permiten solamente desplazamientos con ``seek`` relativos al "
-"comienzo (con la excepción de ir justo al final con ``seek(0, 2)``) y los "
-"únicos valores de *desplazamiento* válidos son aquellos retornados por ``f."
+"modo), se permiten solamente desplazamientos con seek relativos al comienzo "
+"(con la excepción de ir justo al final con ``seek(0, 2)``) y los únicos "
+"valores de *desplazamiento* válidos son aquellos retornados por ``f."
 "tell()``, o cero. Cualquier otro valor de *desplazamiento* produce un "
 "comportamiento indefinido."
 
@@ -595,9 +595,9 @@ msgid ""
 "meth:`~file.truncate` which are less frequently used; consult the Library "
 "Reference for a complete guide to file objects."
 msgstr ""
-"Los objetos archivo tienen algunos métodos más, como :meth:`isatty` y :meth:"
-"`truncate` que son usados menos frecuentemente; consultá la Referencia de la "
-"Biblioteca para una guía completa sobre los objetos archivo."
+"Los objetos archivo tienen algunos métodos más, como :meth:`~file.isatt` y :"
+"meth:`~file.truncate` que son usados menos frecuentemente; consultá la "
+"Referencia de la Biblioteca para una guía completa sobre los objetos archivo."
 
 #: ../Doc/tutorial/inputoutput.rst:453
 msgid "Saving structured data with :mod:`json`"
@@ -667,9 +667,8 @@ msgid ""
 "a :term:`text file` object opened for writing, we can do this::"
 msgstr ""
 "Otra variante de la función :func:`~json.dumps`, llamada :func:`~json.dump`, "
-"simplemente serializa el objeto a un :term:`archivo de texto`. Así que, si "
-"``f`` es un objeto :term:`archivo de texto` abierto para escritura, podemos "
-"hacer::"
+"simplemente serializa el objeto a un :term:`text file`. Así que, si ``f`` es "
+"un objeto :term:`text file` abierto para escritura, podemos hacer::"
 
 #: ../Doc/tutorial/inputoutput.rst:492
 msgid ""
