--- a/tutorial/modules.po
+++ b/tutorial/modules.po
@@ -801,7 +801,7 @@ msgid ""
 "package, it can use ``from sound.effects import echo``."
 msgstr ""
 "Cuando se estructuran los paquetes en sub-paquetes (como en el ejemplo :mod:"
-"`sound`), puedes usar ``import`` absolutos para referirte a submódulos de "
+"`sound`), puedes usar import absolutos para referirte a submódulos de "
 "paquetes hermanos.  Por ejemplo, si el módulo :mod:`sound.filters.vocoder` "
 "necesita usar el módulo :mod:`echo` en el paquete :mod:`sound.effects`, "
 "puede hacer ``from sound.effects import echo``."
@@ -813,8 +813,8 @@ msgid ""
 "current and parent packages involved in the relative import.  From the :mod:"
 "`surround` module for example, you might use::"
 msgstr ""
-"También puedes escribir ``import`` relativos con la forma ``from module "
-"import name``.  Estos imports usan puntos adelante para indicar los paquetes "
+"También puedes escribir import relativos con la forma ``from module import "
+"name``.  Estos imports usan puntos adelante para indicar los paquetes "
 "actuales o paquetes padres involucrados en el import relativo. En el "
 "ejemplo :mod:`surround`, podrías hacer::"
 
