--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -372,7 +372,7 @@ msgid ""
 "config`)."
 msgstr ""
 "Si no se da ninguna opción de interfaz, :option:`-i` está implícita, ``sys."
-"argv[0]`` es una cadena vacía (``\"``) y el directorio actual se agregará al "
+"argv[0]`` es una cadena vacía (``\"\"``) y el directorio actual se agregará al "
 "inicio de :data:`sys.path`.  Además, la finalización de tabulación y la "
 "edición del historial se habilitan automáticamente, si están disponibles en "
 "su plataforma (consulte :ref:`rlcompleter-config`)."
@@ -830,7 +830,7 @@ msgstr ""
 "``-X tracemalloc`` para iniciar el seguimiento de las asignaciones de "
 "memoria de Python mediante el módulo :mod:`tracemalloc`. De forma "
 "predeterminada, solo el marco más reciente se almacena en un seguimiento de "
-"un seguimiento. Utilice ``-X tracemalloc-NFRAME`` para iniciar el "
+"un seguimiento. Utilice ``-X tracemalloc=NFRAME`` para iniciar el "
 "seguimiento con un límite de rastreo de marcos *NFRAME*. Consulte el :func:"
 "`tracemalloc.start` para obtener más información."
 
@@ -902,7 +902,7 @@ msgstr "Se ha añadido la opción :option:`-X`."
 
 #: ../Doc/using/cmdline.rst:484
 msgid "The ``-X faulthandler`` option."
-msgstr "La opción ``-X faulhandler``."
+msgstr "La opción ``-X faulthandler``."
 
 #: ../Doc/using/cmdline.rst:487
 msgid "The ``-X showrefcount`` and ``-X tracemalloc`` options."
@@ -942,7 +942,7 @@ msgstr "La opción ``-X warn_default_encoding``."
 
 #: ../Doc/using/cmdline.rst:510
 msgid "The ``-X oldparser`` option."
-msgstr "La opción ``-X analizador antiguo``."
+msgstr "La opción ``-X oldparser``."
 
 #: ../Doc/using/cmdline.rst:514
 msgid "Options you shouldn't use"
@@ -1576,7 +1576,7 @@ msgid ""
 "activates, or else if a locale that *would* have triggered coercion is still "
 "active when the Python runtime is initialized."
 msgstr ""
-"Para fines de depuración, establecer ``PYTHONCOERCECLOCALE-warn`` hará que "
+"Para fines de depuración, establecer ``PYTHONCOERCECLOCALE=warn`` hará que "
 "Python emita mensajes de advertencia en ``stderr`` si se activa la coerción "
 "de configuración regional, o si una configuración regional que *would* ha "
 "activado la coerción sigue activa cuando se inicializa el tiempo de "
@@ -1676,231 +1676,3 @@ msgid ""
 msgstr ""
 "Necesita Python configurado con la opción de compilación :option:`--with-"
 "trace-refs`."
-
-#~ msgid ""
-#~ "``-X showalloccount`` to output the total count of allocated objects for "
-#~ "each type when the program finishes. This only works when Python was "
-#~ "built with ``COUNT_ALLOCS`` defined."
-#~ msgstr ""
-#~ "``-X showalloccount`` para generar el recuento total de objetos asignados "
-#~ "para cada tipo cuando finalice el programa. Esto sólo funciona cuando "
-#~ "Python se creó con ``COUNT_ALLOCS`` definido."
-
-#~ msgid ""
-#~ "``-X dev``: enable CPython's \"development mode\", introducing additional "
-#~ "runtime checks which are too expensive to be enabled by default. It "
-#~ "should not be more verbose than the default if the code is correct: new "
-#~ "warnings are only emitted when an issue is detected. Effect of the "
-#~ "developer mode:"
-#~ msgstr ""
-#~ "``-X dev``: habilite el \"modo de desarrollo\" de CPython, introduciendo "
-#~ "comprobaciones de tiempo de ejecución adicionales que son demasiado "
-#~ "costosas para habilitarse de forma predeterminada. No debe ser más "
-#~ "detallado que el valor predeterminado si el código es correcto: las "
-#~ "nuevas advertencias solo se emiten cuando se detecta un problema. Efecto "
-#~ "del modo de desarrollador:"
-
-#~ msgid "Add ``default`` warning filter, as :option:`-W` ``default``."
-#~ msgstr ""
-#~ "Agregue el filtro de advertencia ``default``, como :option:`-W` "
-#~ "``default``."
-
-#~ msgid ""
-#~ "Install debug hooks on memory allocators: see the :c:func:"
-#~ "`PyMem_SetupDebugHooks` C function."
-#~ msgstr ""
-#~ "Instale los enlaces de depuración en los asignadores de memoria: vea la "
-#~ "función :c:func:`PyMem_SetupDebugHooks` C."
-
-#~ msgid ""
-#~ "Enable the :mod:`faulthandler` module to dump the Python traceback on a "
-#~ "crash."
-#~ msgstr ""
-#~ "Habilite el módulo :mod:`faulthandler` para volcar el rastreo de Python "
-#~ "en un bloqueo."
-
-#~ msgid "Enable :ref:`asyncio debug mode <asyncio-debug-mode>`."
-#~ msgstr "Habilite :ref:`asyncio debug mode <asyncio-debug-mode>`."
-
-#~ msgid ""
-#~ "Set the :attr:`~sys.flags.dev_mode` attribute of :attr:`sys.flags` to "
-#~ "``True``."
-#~ msgstr ""
-#~ "Establezca el atributo :attr:`sys.flags.dev_mode` de :attr:`sys.flags` en "
-#~ "``True``."
-
-#~ msgid ":class:`io.IOBase` destructor logs ``close()`` exceptions."
-#~ msgstr ":class:`io.IOBase` destructor registra las excepciones ``close()``."
-
-#~ msgid ""
-#~ "By default, each warning is printed once for each source line where it "
-#~ "occurs.  This option controls how often warnings are printed."
-#~ msgstr ""
-#~ "De forma predeterminada, cada advertencia se imprime una vez para cada "
-#~ "línea de origen donde se produce.  Esta opción controla la frecuencia con "
-#~ "la que se imprimen las advertencias."
-
-#~ msgid ""
-#~ "``-X oldparser``: enable the traditional LL(1) parser.  See also :envvar:"
-#~ "`PYTHONOLDPARSER` and :pep:`617`."
-#~ msgstr ""
-#~ "``-X oldparser``: habilita el analizador tradicional LL(1). Vea también :"
-#~ "envvar:`PYTHONOLDPARSER` y :pep:`617`."
-
-#~ msgid ""
-#~ "``-X utf8`` enables UTF-8 mode for operating system interfaces, "
-#~ "overriding the default locale-aware mode. ``-X utf8=0`` explicitly "
-#~ "disables UTF-8 mode (even when it would otherwise activate "
-#~ "automatically). See :envvar:`PYTHONUTF8` for more details."
-#~ msgstr ""
-#~ "``-X utf8`` habilita el modo UTF-8 para las interfaces del sistema "
-#~ "operativo, reemplazando el modo predeterminado compatible con la "
-#~ "configuración regional. ``-X utf8-0`` desactiva explícitamente el modo "
-#~ "UTF-8 (incluso cuando de lo contrario se activaría automáticamente). "
-#~ "Consulte :envvar:`PYTHONUTF8` para obtener más detalles."
-
-#~ msgid ""
-#~ "If this is set to a non-empty string, enable the traditional LL(1) parser."
-#~ msgstr ""
-#~ "Si se establece en una cadena no vacía, habilite el analizador "
-#~ "tradicional LL(1)."
-
-#~ msgid "See also the :option:`-X` ``oldparser`` option and :pep:`617`."
-#~ msgstr "Vea también la opción :option:`-X` ``oldparser`` y :pep:`617`."
-
-#~ msgid "Install debug hooks:"
-#~ msgstr "Instale los ganchos del debug:"
-
-#~ msgid ""
-#~ "See the :ref:`default memory allocators <default-memory-allocators>` and "
-#~ "the :c:func:`PyMem_SetupDebugHooks` function (install debug hooks on "
-#~ "Python memory allocators)."
-#~ msgstr ""
-#~ "Consulte :ref:`default memory allocators <default-memory-allocators>` y "
-#~ "la función :c:func:`PyMem_SetupDebugHooks` (instalar enlaces de "
-#~ "depuración en los asignadores de memoria de Python)."
-
-#~ msgid ""
-#~ "If set to ``1``, enables the interpreter's UTF-8 mode, where ``UTF-8`` is "
-#~ "used as the text encoding for system interfaces, regardless of the "
-#~ "current locale setting."
-#~ msgstr ""
-#~ "Si se establece en ``1``, habilita el modo UTF-8 del intérprete, donde "
-#~ "``UTF-8`` se utiliza como codificación de texto para las interfaces del "
-#~ "sistema, independientemente de la configuración regional actual."
-
-#~ msgid "This means that:"
-#~ msgstr "Esto significa que:"
-
-#~ msgid ""
-#~ ":func:`sys.getfilesystemencoding()` returns ``'UTF-8'`` (the locale "
-#~ "encoding is ignored)."
-#~ msgstr ""
-#~ ":func:`sys.getfilesystemencoding()` devuelve ``'UTF-8'`` (se omite la "
-#~ "codificación de configuración local)."
-
-#~ msgid ""
-#~ ":func:`locale.getpreferredencoding()` returns ``'UTF-8'`` (the locale "
-#~ "encoding is ignored, and the function's ``do_setlocale`` parameter has no "
-#~ "effect)."
-#~ msgstr ""
-#~ ":func:`locale.getpreferredencoding()` devuelve ``'UTF-8'`` (se omite la "
-#~ "codificación de configuración regional y el parámetro ``do_setlocale`` de "
-#~ "la función no tiene ningún efecto)."
-
-#~ msgid ""
-#~ ":data:`sys.stdin`, :data:`sys.stdout`, and :data:`sys.stderr` all use "
-#~ "UTF-8 as their text encoding, with the ``surrogateescape`` :ref:`error "
-#~ "handler <error-handlers>` being enabled for :data:`sys.stdin` and :data:"
-#~ "`sys.stdout` (:data:`sys.stderr` continues to use ``backslashreplace`` as "
-#~ "it does in the default locale-aware mode)"
-#~ msgstr ""
-#~ ":data:`sys.stdin`, :data:`sys.stdout`, y :data:`sys.stderr` todos usan "
-#~ "UTF-8 como su codificación de texto, con el ``surrogateescape`` :ref:"
-#~ "`error handler <error-handlers>` que se habilita para :data:`sys.stdin` "
-#~ "y :data:`sys.stdout` (:data:`sys.stderr` continúa utilizando "
-#~ "``backslashreplace`` como lo hace en el modo predeterminado de "
-#~ "configuración local)"
-
-#~ msgid ""
-#~ "As a consequence of the changes in those lower level APIs, other higher "
-#~ "level APIs also exhibit different default behaviours:"
-#~ msgstr ""
-#~ "Como consecuencia de los cambios en esas API de nivel inferior, otras API "
-#~ "de nivel superior también presentan diferentes comportamientos "
-#~ "predeterminados:"
-
-#~ msgid ""
-#~ "Command line arguments, environment variables and filenames are decoded "
-#~ "to text using the UTF-8 encoding."
-#~ msgstr ""
-#~ "Los argumentos de línea de comandos, las variables de entorno y los "
-#~ "nombres de archivo se descodifican en texto mediante la codificación "
-#~ "UTF-8."
-
-#~ msgid ""
-#~ ":func:`os.fsdecode()` and :func:`os.fsencode()` use the UTF-8 encoding."
-#~ msgstr ""
-#~ ":func:`os.fsdecode()` y :func:`os.fsencode()` utilizan la codificación "
-#~ "UTF-8."
-
-#~ msgid ""
-#~ ":func:`open()`, :func:`io.open()`, and :func:`codecs.open()` use the "
-#~ "UTF-8 encoding by default. However, they still use the strict error "
-#~ "handler by default so that attempting to open a binary file in text mode "
-#~ "is likely to raise an exception rather than producing nonsense data."
-#~ msgstr ""
-#~ ":func:`open()`, :func:`io.open()`, y :func:`codecs.open()` utilizan la "
-#~ "codificación UTF-8 de forma predeterminada. Sin embargo, siguen usando el "
-#~ "controlador de errores estricto de forma predeterminada para que intentar "
-#~ "abrir un archivo binario en modo de texto sea probable que genere una "
-#~ "excepción en lugar de producir datos sin sentido."
-
-#~ msgid ""
-#~ "Note that the standard stream settings in UTF-8 mode can be overridden "
-#~ "by :envvar:`PYTHONIOENCODING` (just as they can be in the default locale-"
-#~ "aware mode)."
-#~ msgstr ""
-#~ "Tenga en cuenta que la configuración de secuencia estándar en modo UTF-8 "
-#~ "se puede invalidar por :envvar:`PYTHONIOENCODING` (igual que pueden estar "
-#~ "en el modo predeterminado de configuración local)."
-
-#~ msgid ""
-#~ "If set to ``0``, the interpreter runs in its default locale-aware mode."
-#~ msgstr ""
-#~ "Si se establece en ``0``, el intérprete se ejecuta en su modo "
-#~ "predeterminado compatible con la configuración local."
-
-#~ msgid ""
-#~ "If this environment variable is not set at all, then the interpreter "
-#~ "defaults to using the current locale settings, *unless* the current "
-#~ "locale is identified as a legacy ASCII-based locale (as described for :"
-#~ "envvar:`PYTHONCOERCECLOCALE`), and locale coercion is either disabled or "
-#~ "fails. In such legacy locales, the interpreter will default to enabling "
-#~ "UTF-8 mode unless explicitly instructed not to do so."
-#~ msgstr ""
-#~ "Si esta variable de entorno no se establece en absoluto, el intérprete "
-#~ "utiliza de forma predeterminada la configuración regional actual, *a "
-#~ "menos que* la configuración regional actual se identifique como una "
-#~ "configuración regional basada en ASCII heredada (como se describe para :"
-#~ "envvar:`PYTHONCOERCECLOCALE`) y la coerción de configuración regional "
-#~ "está deshabilitada o se produce un error. En estas configuraciones "
-#~ "regionales heredadas, el intérprete habilitará de forma predeterminada el "
-#~ "modo UTF-8 a menos que se indique explícitamente que no lo haga."
-
-#~ msgid "Also available as the :option:`-X` ``utf8`` option."
-#~ msgstr "También disponible como la opción :option:`-X` ``utf8``."
-
-#~ msgid "See :pep:`540` for more details."
-#~ msgstr "Consulte :pep:`540` para obtener más detalles."
-
-#~ msgid ""
-#~ "Setting these variables only has an effect in a debug build of Python."
-#~ msgstr ""
-#~ "Establecer estas variables solo tiene un efecto en una compilación de "
-#~ "depuración de Python."
-
-#~ msgid "Need Python configured with the ``--with-pydebug`` build option."
-#~ msgstr ""
-#~ "Necesita configurar Python con la opción de compilación ``--with-"
-#~ "pydebug``."
