--- a/using/windows.po
+++ b/using/windows.po
@@ -944,7 +944,7 @@ msgid ""
 "automatically use the headers and import libraries in your build."
 msgstr ""
 "Junto al directorio ``tools`` está el directorio ``build\\native``. Este "
-"contiene un archivo de propiedades MSBuild ``Python.props`` que puede ser "
+"contiene un archivo de propiedades MSBuild ``python.props`` que puede ser "
 "usado en un proyecto C++ para referenciar la instalación de Python. Al "
 "incluir las configuraciones, automáticamente se usarán los encabezados y se "
 "importarán las bibliotecas en la compilación."
@@ -1436,7 +1436,7 @@ msgid ""
 msgstr ""
 "Se puede utilizar el :ref:`modo UTF-8 <utf8-mode>` para cambiar la "
 "codificación predeterminada a UTF-8. El :ref:`modo UTF-8 <utf8-mode>` se "
-"puede activar mediante la opción de línea de comandos ``-X utf-8``, o con la "
+"puede activar mediante la opción de línea de comandos ``-X utf8``, o con la "
 "variable de entorno ``PYTHONUTF8=1``. Consulte :envvar:`PYTHONUTF8` para "
 "activar el modo UTF-8, y :ref:`setting-envvars` para saber cómo modificar "
 "las variables de entorno."
