--- a/whatsnew/3.10.po
+++ b/whatsnew/3.10.po
@@ -2202,7 +2202,7 @@ msgid ""
 "in :issue:`23427`.)"
 msgstr ""
 "Agregar atributo :data:`sys.orig_argv`: la lista de los argumentos "
-"originales de la línea de comando pasados ​​al ejecutable de Python. "
+"originales de la línea de comando pasados al ejecutable de Python. "
 "(Contribuido por Victor Stinner en :issue:`23427`.)"
 
 #: ../Doc/whatsnew/3.10.rst:1377
@@ -3607,7 +3607,7 @@ msgid ""
 msgstr ""
 "Agregue un nuevo miembro :c:member:`~PyConfig.orig_argv` a la estructura :c:"
 "type:`PyConfig`: la lista de los argumentos originales de la línea de "
-"comandos pasados ​​al ejecutable de Python. (Contribuido por Victor Stinner "
+"comandos pasados al ejecutable de Python. (Contribuido por Victor Stinner "
 "en :issue:`23427`.)"
 
 #: ../Doc/whatsnew/3.10.rst:2042
