--- a/whatsnew/3.6.po
+++ b/whatsnew/3.6.po
@@ -2513,7 +2513,7 @@ msgid ""
 "now support the :term:`context manager` protocol. (Contributed by Aviv "
 "Palivoda in :issue:`26404`.)"
 msgstr ""
-"Los servidores basados ​​en el módulo :mod:`socketserver`, incluidos los "
+"Los servidores basados en el módulo :mod:`socketserver`, incluidos los "
 "definidos en :mod:`http.server`, :mod:`xmlrpc.server` y :mod:`wsgiref."
 "simple_server`, ahora admiten el protocolo :term:`context manager`. "
 "(Contribuido por Aviv Palivoda en :issue:`26404`.)"
@@ -3994,7 +3994,7 @@ msgid ""
 "longer called, and the exception will stop a single-threaded server. "
 "(Contributed by Martin Panter in :issue:`23430`.)"
 msgstr ""
-"Los servidores basados ​​en el módulo :mod:`socketserver`, incluidos los "
+"Los servidores basados en el módulo :mod:`socketserver`, incluidos los "
 "definidos en :mod:`http.server`, :mod:`xmlrpc.server` y :mod:`wsgiref."
 "simple_server`, ahora solo detectan excepciones derivadas de :exc:"
 "`Exception`. Por lo tanto, si un controlador de solicitudes genera una "
@@ -4070,7 +4070,7 @@ msgid ""
 "additional keyword arguments will need to adjust their calls to :meth:`type."
 "__new__` (whether direct or via :class:`super`) accordingly."
 msgstr ""
-"Como parte de :pep:`487`, el manejo de argumentos de palabras clave pasados ​​"
+"Como parte de :pep:`487`, el manejo de argumentos de palabras clave pasados "
 "a :class:`type` (aparte de la sugerencia de metaclase, ``metaclass``) ahora "
 "se delega consistentemente en :meth:`object.__init_subclass__`. Esto "
 "significa que :meth:`type.__new__` y :meth:`type.__init__` ahora aceptan "
