--- a/whatsnew/3.9.po
+++ b/whatsnew/3.9.po
@@ -2491,7 +2491,7 @@ msgstr ""
 "compilación mucho más lenta, el comportamiento anterior se puede restaurar "
 "usando ``./configure [..] PROFILE_TASK=\"-m test --pgo-extended\"``. No "
 "garantizamos qué conjunto de tareas de PGO produce una compilación más "
-"rápida. Los usuarios interesados ​​deben ejecutar sus propios puntos de "
+"rápida. Los usuarios interesados deben ejecutar sus propios puntos de "
 "referencia relevantes, ya que los resultados pueden depender del entorno, la "
 "carga de trabajo y la cadena de herramientas del compilador. (Consulte :"
 "issue:`36044` y :issue:`37707` para obtener más detalles)."
