--- a/tutorial/venv.po
+++ b/tutorial/venv.po
@@ -96,8 +96,8 @@ msgid ""
 "system, you can select a specific Python version by running ``python3`` or "
 "whichever version you want."
 msgstr ""
-"El script usado para crear y manejar entornos virtuales es :mod:`pyvenv`.  :"
-"mod:`pyvenv` normalmente instalará la versión mas reciente de Python que "
+"El script usado para crear y manejar entornos virtuales es :mod:`venv`.  :"
+"mod:`venv` normalmente instalará la versión mas reciente de Python que "
 "tengas disponible; el script también es instalado con un número de versión, "
 "con lo que si tienes múltiples versiones de Python en tu sistema puedes "
 "seleccionar una versión de Python específica ejecutando ``python3`` o la "
