--- a/using/configure.po
+++ b/using/configure.po
@@ -435,8 +435,8 @@ msgid ""
 "the ``NDEBUG`` macro (see also the :option:`--with-assertions` configure "
 "option). Main runtime checks:"
 msgstr ""
-"Agrega verificaciones de tiempo de ejecución: código rodeado por ```#ifdef "
-"Py_DEBUG`` y `#endif``. Habilite las aserciones ``assert(...)`` y "
+"Agrega verificaciones de tiempo de ejecución: código rodeado por ``#ifdef "
+"Py_DEBUG`` y ``#endif``. Habilite las aserciones ``assert(...)`` y "
 "``_PyObject_ASSERT(...)``: no configure la macro ``NDEBUG`` (consultar "
 "también la opción de configuración :option:`--with-assertions`). "
 "Comprobaciones principales de tiempo de ejecución:"
@@ -914,7 +914,7 @@ msgstr "Los archivos C (``.c``) se crean como archivos objeto (``.o``)."
 #: ../Doc/using/configure.rst:511
 msgid "A static ``libpython`` library (``.a``) is created from objects files."
 msgstr ""
-"La biblioteca estática `libpython`` (``.a``) se crea a a partir de archivos "
+"La biblioteca estática ``libpython`` (``.a``) se crea a a partir de archivos "
 "de objetos."
 
 #: ../Doc/using/configure.rst:512
@@ -930,7 +930,7 @@ msgid ""
 "C extensions are built by the Makefile (see :file:`Modules/Setup`) and "
 "``python setup.py build``."
 msgstr ""
-"Las extensiones C son creadas por Makefile (ver :file:`Midules/Setup`) y "
+"Las extensiones C son creadas por Makefile (ver :file:`Modules/Setup`) y "
 "``python setup.py build``."
 
 #: ../Doc/using/configure.rst:518
