--- a/whatsnew/changelog.po
+++ b/whatsnew/changelog.po
@@ -3817,7 +3817,7 @@ msgid ""
 "clearly about pickle insecurity"
 msgstr ""
 "`bpo-37977 <https://bugs.python.org/issue37977>`__: advierte con más fuerza "
-"y ​​claridad sobre la inseguridad de los pepinillos"
+"y claridad sobre la inseguridad de los pepinillos"
 
 #: ../build/NEWS:1421
 msgid ""
@@ -4349,7 +4349,7 @@ msgid ""
 "`Py_SetProgramName`: fix Python initialization to use specified arguments."
 msgstr ""
 "`bpo-38234 <https://bugs.python.org/issue38234>`__: Python ignoró los "
-"argumentos pasados ​​a :c:func:`Py_SetPath`, :c:func:`Py_SetPythonHome` y :c:"
+"argumentos pasados a :c:func:`Py_SetPath`, :c:func:`Py_SetPythonHome` y :c:"
 "func:`Py_SetProgramName`: corrige la inicialización de Python para usar "
 "argumentos especificados."
 
@@ -5445,7 +5445,7 @@ msgstr ""
 "mucho más lenta, puede restaurar el comportamiento anterior usando './"
 "configure [..] PROFILE_TASK = \"- m test --pgo-extended\"'. No garantizamos "
 "qué conjunto de tareas de PGO produce una compilación más rápida. Los "
-"usuarios interesados ​​deben ejecutar sus propios puntos de referencia "
+"usuarios interesados deben ejecutar sus propios puntos de referencia "
 "relevantes, ya que los resultados pueden depender del entorno, la carga de "
 "trabajo y la cadena de herramientas del compilador."
 
@@ -5484,7 +5484,7 @@ msgid ""
 msgstr ""
 "`bpo-37627 <https://bugs.python.org/issue37627>`__: Inicialice el cuadro de "
 "diálogo Personalizar ejecución con los argumentos de la línea de comando "
-"ingresados ​​más recientemente antes. Opcionalmente, el usuario puede editar "
+"ingresados más recientemente antes. Opcionalmente, el usuario puede editar "
 "antes de enviarlos."
 
 #: ../build/NEWS:2069
@@ -8109,7 +8109,7 @@ msgid ""
 "Add a few tests to verify that the various values passed to the std* "
 "arguments actually work."
 msgstr ""
-"Agregue algunas pruebas para verificar que los diversos valores pasados ​​a "
+"Agregue algunas pruebas para verificar que los diversos valores pasados a "
 "los argumentos std * realmente funcionen."
 
 #: ../build/NEWS:3026
@@ -10279,7 +10279,7 @@ msgid ""
 "memory issues caused by circular references"
 msgstr ""
 "`bpo-34745 <https://bugs.python.org/issue34745>`__: Soluciona problemas de "
-"memoria ssl :mod:`asyncio` causados ​​por referencias circulares"
+"memoria ssl :mod:`asyncio` causados por referencias circulares"
 
 #: ../build/NEWS:3845
 msgid ""
@@ -11092,7 +11092,7 @@ msgid ""
 "field` throwing away empty mapping objects passed as metadata."
 msgstr ""
 "`bpo-35960 <https://bugs.python.org/issue35960>`__: Se corrigió que :func:"
-"`dataclasses.field` arrojara objetos de mapeo vacíos pasados ​​como metadatos."
+"`dataclasses.field` arrojara objetos de mapeo vacíos pasados como metadatos."
 
 #: ../build/NEWS:4148
 msgid ""
@@ -11852,7 +11852,7 @@ msgid ""
 "based bytecode files in :mod:`zipimport`. Patch by Elvis Pranskevichus."
 msgstr ""
 "`bpo-34022 <https://bugs.python.org/issue34022>`__: se corrigió el manejo de "
-"archivos de código de bytes basados ​​en hash en :mod:`zipimport`. Parche de "
+"archivos de código de bytes basados en hash en :mod:`zipimport`. Parche de "
 "Elvis Pranskevichus."
 
 #: ../build/NEWS:4434
@@ -13056,7 +13056,7 @@ msgid ""
 "customized decode error handlers."
 msgstr ""
 "`bpo-32583 <https://bugs.python.org/issue32583>`__: corrige posibles fallas "
-"en los decodificadores Unicode incorporados causados ​​por errores de "
+"en los decodificadores Unicode incorporados causados por errores de "
 "escritura fuera del límite cuando se utilizan controladores de errores de "
 "decodificación personalizados."
 
@@ -13884,7 +13884,7 @@ msgstr ""
 "`bpo-35226 <https://bugs.python.org/issue35226>`__: verifique de forma "
 "recursiva los argumentos al probar la igualdad de los objetos :class:"
 "`unittest.mock.call` y agregue una nota de que el seguimiento de los "
-"parámetros utilizados para crear antepasados ​​de simulacros en ``mock_calls`` "
+"parámetros utilizados para crear antepasados de simulacros en ``mock_calls`` "
 "no es posible."
 
 #: ../build/NEWS:5123
@@ -15142,7 +15142,7 @@ msgid ""
 "interactive session.  Patch by Anthony Sottile."
 msgstr ""
 "`bpo-19891 <https://bugs.python.org/issue19891>`__: Ignore los errores "
-"causados ​​por homedir faltante / no escribible mientras se escribe el "
+"causados por homedir faltante / no escribible mientras se escribe el "
 "historial durante la salida de una sesión interactiva. Parche de Anthony "
 "Sottile."
 
@@ -15328,7 +15328,7 @@ msgstr ""
 "`bpo-34056 <https://bugs.python.org/issue34056>`__: asegúrese de que la cuña "
 "del cargador creada por ``imp.load_module`` siempre devuelva bytes de su "
 "función ``get_data()``. Esto corrige el uso de ``imp.load_module`` con pycs "
-"basados ​​en hash :pep:`552`."
+"basados en hash :pep:`552`."
 
 #: ../build/NEWS:5624
 msgid ""
@@ -15379,7 +15379,7 @@ msgid ""
 "``webbrowser`` module. Patch by Bumsik Kim."
 msgstr ""
 "`bpo-34019 <https://bugs.python.org/issue34019>`__: navegador web: corrige "
-"los argumentos pasados ​​al navegador Opera al abrir una nueva URL usando el "
+"los argumentos pasados al navegador Opera al abrir una nueva URL usando el "
 "módulo ``webbrowser``. Parche de Bumsik Kim."
 
 #: ../build/NEWS:5642
@@ -15450,7 +15450,7 @@ msgstr ""
 "`bpo-33871 <https://bugs.python.org/issue33871>`__: Desbordamiento de entero "
 "fijo en :func:`os.readv`, :func:`os.writev`, :func:`os.preadv` y :func:`os."
 "pwritev` y en :func:`os.sendfile` con argumentos *headers* or *trailers* (en "
-"sistemas operativos basados ​​en BSD y macOS)."
+"sistemas operativos basados en BSD y macOS)."
 
 #: ../build/NEWS:5665
 msgid ""
@@ -16436,7 +16436,7 @@ msgid ""
 "the resulting output."
 msgstr ""
 "`bpo-33251 <https://bugs.python.org/issue33251>`__: `ConfigParser.items ()` "
-"se corrigió para que los pares clave-valor pasados ​​a través de `vars` no se "
+"se corrigió para que los pares clave-valor pasados a través de `vars` no se "
 "incluyan en la salida resultante."
 
 #: ../build/NEWS:6003 ../build/NEWS:7662 ../build/NEWS:11974
@@ -16445,7 +16445,7 @@ msgid ""
 "regression on newer glibcs"
 msgstr ""
 "`bpo-33329 <https://bugs.python.org/issue33329>`__: se corrigió la regresión "
-"de multiprocesamiento en glibcs ​​más nuevos"
+"de multiprocesamiento en glibcs más nuevos"
 
 #: ../build/NEWS:6005
 msgid ""
@@ -17572,7 +17572,7 @@ msgid ""
 msgstr ""
 "`bpo-35511 <https://bugs.python.org/issue35511>`__: se especificó ese "
 "perfil. La clase de perfil no admite métodos de habilitación o "
-"deshabilitación. Además, elaboró ​​que el objeto Profile como administrador de "
+"deshabilitación. Además, elaboró que el objeto Profile como administrador de "
 "contexto solo es compatible con el módulo cProfile."
 
 #: ../build/NEWS:6398
@@ -18813,7 +18813,7 @@ msgid ""
 "mips r6 and riscv variants (used in extension suffixes)."
 msgstr ""
 "`bpo-33377 <https://bugs.python.org/issue33377>`__: agregue nuevos tripletes "
-"para las variantes mips r6 y riscv (usados ​​en sufijos de extensión)."
+"para las variantes mips r6 y riscv (usados en sufijos de extensión)."
 
 #: ../build/NEWS:6816 ../build/NEWS:7755
 msgid ""
@@ -19398,7 +19398,7 @@ msgid ""
 "PEP 8 names and ttk widgets, make some objects global, and add tests."
 msgstr ""
 "`bpo-35598 <https://bugs.python.org/issue35598>`__: Actualice config_key: "
-"use nombres de PEP 8 y ​​widgets ttk, haga que algunos objetos sean globales y "
+"use nombres de PEP 8 y widgets ttk, haga que algunos objetos sean globales y "
 "agregue pruebas."
 
 #: ../build/NEWS:7005
@@ -20665,7 +20665,7 @@ msgid ""
 "as a function decorator. Patch by Martin Teichmann."
 msgstr ""
 "`bpo-30306 <https://bugs.python.org/issue30306>`__: contextlib."
-"contextmanager ahora libera los argumentos pasados ​​al generador subyacente "
+"contextmanager ahora libera los argumentos pasados al generador subyacente "
 "tan pronto como se ingresa al administrador de contexto. Anteriormente, los "
 "mantendría con vida mientras el administrador de contexto estuviera vivo, "
 "incluso cuando no se usaba como decorador de funciones. Parche de Martin "
@@ -21006,7 +21006,7 @@ msgstr ""
 "resources` y :class:`importlib.abc.ResourceReader` como la API unificada "
 "para leer los recursos contenidos en los paquetes. Los cargadores que deseen "
 "respaldar la lectura de recursos deben implementar el método :meth:"
-"`get_resource_reader()`. Los cargadores basados ​​en archivos y zipimport "
+"`get_resource_reader()`. Los cargadores basados en archivos y zipimport "
 "implementan estas API. :class:`importlib.abc.ResourceLoader` está en desuso "
 "a favor de estas nuevas API."
 
@@ -21210,7 +21210,7 @@ msgid ""
 msgstr ""
 "`bpo-29708 <https://bugs.python.org/issue29708>`__: si se establece la "
 "variable de entorno :envvar:`SOURCE_DATE_EPOCH`, :mod:`py_compile` siempre "
-"creará archivos ``.pyc`` basados ​​en hash."
+"creará archivos ``.pyc`` basados en hash."
 
 #: ../build/NEWS:8558
 msgid ""
@@ -21488,7 +21488,7 @@ msgid ""
 msgstr ""
 "`bpo-31650 <https://bugs.python.org/issue31650>`__: Implementar :pep:`552` "
 "(pycs deterministas). Python ahora admite la invalidación de archivos de "
-"caché de código de bytes basados ​​en un hash de contenido fuente en lugar de "
+"caché de código de bytes basados en un hash de contenido fuente en lugar de "
 "la última vez que se modificó la fuente."
 
 #: ../build/NEWS:8666
@@ -23736,7 +23736,7 @@ msgid ""
 msgstr ""
 "`bpo-25612 <https://bugs.python.org/issue25612>`__: Mueva el estado de "
 "excepción actual del objeto marco a la co-rutina. Esto simplifica el "
-"intérprete y corrige un par de errores oscuros causados ​​por tener un estado "
+"intérprete y corrige un par de errores oscuros causados por tener un estado "
 "de excepción de intercambio al entrar o salir de un generador."
 
 #: ../build/NEWS:9482
@@ -24427,7 +24427,7 @@ msgid ""
 "than a `list` or a `tuple`). Patch by Oren Milman."
 msgstr ""
 "`bpo-28280 <https://bugs.python.org/issue28280>`__: Hacer `PyMapping_Keys "
-"()`, `PyMapping_Values ​​()` y `PyMapping_Items ()` siempre devuelven una "
+"()`, `PyMapping_Values ()` y `PyMapping_Items ()` siempre devuelven una "
 "`lista` (en lugar de una` lista` o una `tupla`). Parche de Oren Milman."
 
 #: ../build/NEWS:9736 ../build/NEWS:12934
@@ -27304,7 +27304,7 @@ msgstr ""
 "`bpo-30061 <https://bugs.python.org/issue30061>`__: Se corrigieron fallas en "
 "los métodos IOBase __next __ () y readlines () cuando readline () o __next "
 "__ (), respectivamente, devuelven un objeto sin tamaño. Se corrigieron otros "
-"posibles errores causados ​​por no verificar los resultados de PyObject_Size "
+"posibles errores causados por no verificar los resultados de PyObject_Size "
 "(), PySequence_Size () o PyMapping_Size ()."
 
 #: ../build/NEWS:10708
@@ -28380,7 +28380,7 @@ msgid ""
 "underlying Tk variable."
 msgstr ""
 "`bpo-27939 <https://bugs.python.org/issue27939>`__: Se corrigieron errores "
-"en tkinter.ttk.LanamedScale y tkinter.Scale causados ​​por representar la "
+"en tkinter.ttk.LanamedScale y tkinter.Scale causados por representar la "
 "escala como valor flotante internamente en Tk. tkinter.IntVar ahora funciona "
 "si el valor flotante se establece en la variable Tk subyacente."
 
@@ -35481,7 +35481,7 @@ msgid ""
 msgstr ""
 "`bpo-22995 <https://bugs.python.org/issue22995>`__: [ACTUALIZAR] Comente una "
 "de las pruebas de capacidad de selección en _PyObject_GetState () debido a "
-"las regresiones observadas en proyectos basados ​​en Cython."
+"las regresiones observadas en proyectos basados en Cython."
 
 #: ../build/NEWS:16179 ../build/NEWS:18610
 msgid ""
@@ -38933,7 +38933,7 @@ msgstr ""
 "`bpo-29537 <https://bugs.python.org/issue29537>`__: restaure la "
 "compatibilidad en tiempo de ejecución con archivos de código de bytes "
 "generados por CPython 3.5.0 a 3.5.2 y ajuste el bucle de evaluación para "
-"evitar los problemas que podrían ser causados ​​por la variante mal formada "
+"evitar los problemas que podrían ser causados por la variante mal formada "
 "del código de operación BUILD_MAP_UNPACK_WITH_CALL que pueden contener. "
 "Parche de Petr Viktorin, Serhiy Storchaka y Nick Coghlan."
 
@@ -45889,7 +45889,7 @@ msgid ""
 "iterkeys()/itervalues()/iteritems() in the mailbox module."
 msgstr ""
 "`bpo-20729 <https://bugs.python.org/issue20729>`__: se restauró el uso de "
-"lazy iterkeys () / itervalues ​​() / iteritems () en el módulo de buzón."
+"lazy iterkeys () / itervalues () / iteritems () en el módulo de buzón."
 
 #: ../build/NEWS:21867
 msgid ""
@@ -46031,7 +46031,7 @@ msgid ""
 "images from binary data."
 msgstr ""
 "`bpo-21580 <https://bugs.python.org/issue21580>`__: Ahora Tkinter maneja "
-"correctamente los argumentos de bytes pasados ​​a Tk. En particular, esto "
+"correctamente los argumentos de bytes pasados a Tk. En particular, esto "
 "permite inicializar imágenes a partir de datos binarios."
 
 #: ../build/NEWS:21913
@@ -47658,7 +47658,7 @@ msgstr ""
 "`bpo-21117 <https://bugs.python.org/issue21117>`__: se corrigió inspect."
 "signature para brindar un mejor soporte a functools.partial. Debido a las "
 "características específicas de la implementación de functools.partial, los "
-"argumentos posicionales o de palabra clave pasados ​​como argumentos de "
+"argumentos posicionales o de palabra clave pasados como argumentos de "
 "palabra clave se convierten en solo palabras clave."
 
 #: ../build/NEWS:22436
